# hongbomiao.com

./: .ansible-lint  .babelrc  .clang-format  .cmakelintrc  .coderabbit.yaml  .commitlintrc.mjs  .dockerignore  .editorconfig  .editorconfig-checker.json  .env.development.local.example  .eslintignore  .eslintrc.js  .flake8  .gitattributes  .gitignore  .gitmodules  .hadolint.yaml  .huskyrc.js  .isort.cfg  .lintstagedrc.js  .markdownlint-cli2.jsonc  .markdownlint.js  .markdownlintignore  .mergify.yml  .mypy.ini  .prettierignore  .prettierrc.mjs  .renovaterc.json5  .rubocop.yml  .ruff.toml  .snyk  .solhint.json  .solhintignore  .sqlfluff  .sqlfluffignore  .sqruff  .stylelintignore  .stylelintrc.js  .stylelintrc.mjs  .taplo.toml  (+69 more)
.gemini/: config.yaml
aerospace/air-traffic-control-stream/: pyproject.toml
aerospace/air-traffic-control-stream/src/: main.py
aerospace/bluesky/: pyproject.toml
aerospace/flightradar24/: .env.production.local.example  pyproject.toml
aerospace/flightradar24/src/: config.py  main.py
aerospace/hm-aerosandbox/: pyproject.toml
aerospace/hm-aerosandbox/src/: main.py
aerospace/hm-openaerostruct/: pyproject.toml
aerospace/hm-openaerostruct/src/: main.py
ansible/: Makefile  hosts  inventory.yaml  justfile  playbook.yml  pyproject.toml  requirements.yml
ansible/hm-macos-group/: playbook.yml
ansible/hm-ubuntu-group/: playbook.yml
ansible/hm-ubuntu-group/templates/: prefect-agent.service.j2
ansible/hm-windows-group/: playbook.yml
ansible/hm_macos_group/: playbook.yml
ansible/hm_rke2_group/: inventory.yaml  playbook.yml
ansible/hm_rke2_group/templates/: rke2-cilium-values.yaml  rke2-cilium-values.yaml.j2
ansible/hm_ubuntu_group/: inventory.yaml  playbook.yml
ansible/hm_ubuntu_group/inventories/: hm_ubuntu_group.yaml
ansible/hm_ubuntu_group/playbooks/: hm_ubuntu_group.yml
ansible/hm_ubuntu_group/templates/: prefect-agent.service
ansible/hm_windows_group/: inventory.yaml  playbook.yml
api-python/: .env.development  .env.production  .flaskenv  Dockerfile  Makefile  app.py  config.py  docker-entrypoint.sh  justfile  main.py  pyproject.toml  pytest.ini  requirements.txt
api-python-fastapi/: Makefile  pyproject.toml
api-python-fastapi/app/: __init__.py
api-python/flaskr/: __init__.py  conftest.py
api-python/flaskr/blueprints/: garden_sensor_blueprint.py  health_blueprint.py  health_blueprint_test.py  lucky_number_blueprint.py  motor_blueprint.py  seed_blueprint.py
api-python/flaskr/utils/: scheduler.py  sock.py
api-python/hm_api_python/: __init__.py  config.py
api-python/hm_api_python/utils/: kafka_util.py
api-python/routers/: health.py  health_test.py  motor.py  motor_test.py  seed.py  seed_test.py
api-python/src/: app.py  config.py
api-python/src/routers/: completions.py  handle_http_exception.py  motor.py  motor_test.py
api-python/src/utils/: kafka_util.py
api-python/tests/: conftest.py
api-python/utils/: kafka_util.py  logger.py
api-rust/: .env.development  .env.production  Cargo.toml  Dockerfile  Makefile  justfile  pyproject.toml
api-rust/scripts/: download_model.py
api-rust/src/: config.rs  graphql.rs  handlers.rs  main.rs  shared.rs
api-rust/src/graphql/: mutation.rs  query.rs  resolvers.rs  schema.rs
api-rust/src/handlers/: get_police_audio_stream.rs  get_root.rs  get_root_test.rs  get_sse_events.rs  police_audio_stream.rs  root.rs  root_test.rs
convolutional-neural-network/: Makefile  args.py  dvc.yaml  evaluate.py  justfile  main.py  params.yaml  pyproject.toml  requirements.txt  train.py
convolutional-neural-network/.dvc/: config
convolutional-neural-network/.dvc/plots/: confusion.json  default.json  scatter.json
convolutional-neural-network/data/raw/: .gitignore
convolutional-neural-network/model/: data_loader.py  net.py  optimizer.py
convolutional-neural-network/src/: args.py  evaluate.py  main.py  train.py
convolutional-neural-network/src/utils/: device.py  writer.py
convolutional-neural-network/utils/: writer.py
data-distribution-service/: Makefile  hm_message.idl  hm_message.xml  justfile  main.py  publish.py  pyproject.toml  requirements.txt  subscribe.py
feature-store/: Makefile  generate_training_data.py  inspect_materialized_features.py  inspect_raw_data.py  pyproject.toml  requirements.txt
feature-store/driver_features/: example.py  feature_store.yaml
graph-neural-network/: Makefile  args.py  justfile  main.py  pyproject.toml  requirements.txt
graph-neural-network/model/: deeper_gcn.py  gnn.py
graph-neural-network/src/: main.py
graph-neural-network/src/model/: conv.py  data_loader.py  gnn.py
hm-airflow/: Makefile  pyproject.toml
hm-airflow/dags/: greet.py  s3_download.py
hm-geopandas/: pyproject.toml
hm-geopandas/src/: main.py
hm-locust/: Makefile  config.py  justfile  locust.conf  locustfile.py  pyproject.toml
hm-locust/src/: locust.conf  main.py
hm-ni-veristand/: Makefile  pyproject.toml
hm-ni-veristand/src/: main.py
hm-opal-client/: Dockerfile  Makefile  pyproject.toml  requirements.txt  setup.py
hm-opal-client/opal_fetcher_postgres/: provider.py
hm-open3d/: Makefile  main.py  pyproject.toml
hm-open3d/src/: main.py
hm-prefect/: .prefectignore  Makefile  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
hm-prefect/src/collect_data/: main.py  params.json
hm-prefect/src/find_taxi_top_routes/: main.py
hm-prowler/: Makefile  pyproject.toml
hm-pulumi/: Makefile  Pulumi.yaml  __main__.py  pyproject.toml
hm-pyspark/: Makefile  pyproject.toml
hm-pyspark/src/: get_taxi_statistics.py  get_taxi_statistics_sql.py
hm-xxhash/: Makefile  justfile  pyproject.toml
hm-xxhash/src/: main.py
hugging-face/: Makefile  pyproject.toml  sentiment-analysis.py
hugging-face/analyze-sentiment/: pyproject.toml
hugging-face/src/: main.py
liquid-neural-network/: README.md  pyproject.toml
liquid-neural-network/src/: main.py
locust/: Makefile  Pipfile  config.py  locust.conf  locustfile.py  pyproject.toml  requirements.txt
quantum-computing/: Makefile  main.py  pyproject.toml
quantum-computing/src/: main.py
(+6951 files in other folders)
