[project]
name = "hongbomiao.com"
version = "1.0.0"
requires-python = "~=3.13.0"

[dependency-groups]
dev = [
  "ansible==11.1.0",
  "ansible-lint==24.12.2",
  "cmakelint==1.4.3",
  "cpplint==2.0.0",
  "miss-hit==0.9.44",
  "mypy==1.14.1",
  "nb-clean==4.0.1",
  "pip==24.3.1",
  "poethepoet==0.32.0",
  "ruff==0.8.6",
  "sqlfluff==3.3.0",
  "vsg==3.29.0",
  "yamllint==1.35.1",
]

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]

[tool.poe.tasks]
clean-jupyter-notebook = "nb-clean clean"
ansible-galaxy-install = "ansible-galaxy install"
sqlfluff-list-dialects = "sqlfluff dialects"
lint-ansible = { shell = "ansible-lint $(git ls-files '**/playbook.yml')" }
lint-c-cpp-cpplint = "cpplint"
lint-cmake = { shell = "cmakelint $(git ls-files '**/CMakeLists.txt')" }
lint-matlab = { shell = "mh_style $(git ls-files '**/*.m')" }
lint-matlab-fix = { shell = "mh_style --fix $(git ls-files '**/*.m')" }
lint-python = { shell = "ruff check && ruff format --check" }
lint-python-fix = { shell = "ruff check --fix --unsafe-fixes && ruff format" }
lint-sql = "sqlfluff lint"
lint-sql-fix = "sqlfluff fix --force"
lint-vhdl = { shell = "vsg --filename $(git ls-files '**/*.vhd')" }
lint-vhdl-fix = { shell = "vsg --filename $(git ls-files '**/*.vhd') --fix" }
lint-yaml = "yamllint ."
static-type-check-python = "mypy --install-types --non-interactive"
