[project]
name = "hongbomiao.com"
version = "1.0.0"
requires-python = "~=3.13.0"

[dependency-groups]
dev = [
  "ansible-lint==25.1.0",
  "ansible==11.1.0",
  "cmakelint==1.4.3",
  "cpplint==2.0.0",
  "miss-hit==0.9.44",
  "mypy==1.14.1",
  "nb-clean==4.0.1",
  "pip==24.3.1",
  "poethepoet==0.32.1",
  "ruff==0.9.2",
  "rust-just==1.39.0",
  "sqlfluff==3.3.0",
  "vsg==3.30.0",
  "yamllint==1.35.1",
]

[tool.uv]
package = false
environments = ["platform_system != 'Windows'"]

[tool.poe.tasks]
clean-jupyter-notebook = { shell = "nb-clean clean $(git ls-files '**/*.ipynb')" }
ansible-galaxy-install = "ansible-galaxy install"
sqlfluff-list-dialects = "sqlfluff dialects"
lint-ansible = { shell = "ansible-lint $(git ls-files '**/playbook.yml')" }
lint-c-cpp-cpplint = "cpplint"
lint-cmake = { shell = "cmakelint $(git ls-files '**/CMakeLists.txt')" }
lint-justfile = { shell = "git ls-files '**/justfile' justfile | xargs --verbose -I {} just --fmt --check --unstable --justfile={}" }
lint-justfile-fix = { shell = "git ls-files '**/justfile' justfile | xargs --verbose -I {} just --fmt --unstable --justfile={}" }
lint-matlab = { shell = "mh_style $(git ls-files '**/*.m')" }
lint-matlab-fix = { shell = "mh_style --fix $(git ls-files '**/*.m')" }
lint-python = { shell = "ruff check && ruff format --check" }
lint-python-fix = { shell = "ruff check --fix --unsafe-fixes && ruff format" }
lint-sql = "sqlfluff lint"
lint-sql-fix = "sqlfluff fix --force"
lint-vhdl = { shell = "vsg --filename $(git ls-files '**/*.vhd')" }
lint-vhdl-fix = { shell = "vsg --filename $(git ls-files '**/*.vhd') --fix" }
lint-yaml = "yamllint ."
static-type-check-python = "mypy --install-types --non-interactive"
