[project]
name = "hongbomiao.com"
version = "1.0.0"

[dependency-groups]
dev = [
  "cmakelint==1.4.3",
  "cpplint==2.0.2",
  "editorconfig-checker==3.6.0",
  "miss-hit==0.9.44",
  "mypy==1.19.1",
  "nb-clean==4.0.1",
  "pip==25.3",
  "poethepoet==0.38.0",
  "ruff==0.14.10",
  "rust-just==1.45.0",
  "sqlfluff==3.5.0",
  "vsg==3.35.0",
  "yamllint==1.37.1",
]

[tool.uv]
package = false
required-version = ">=0.9.0"
environments = ["platform_system != 'Windows'"]

[tool.poe.tasks]
clean-jupyter-notebook = { shell = "nb-clean clean $(git ls-files '**/*.ipynb')" }
sqlfluff-list-dialects = "sqlfluff dialects"
lint-c-cpp-cpplint = "cpplint"
lint-cmake = { shell = "cmakelint $(git ls-files '**/CMakeLists.txt')" }
lint-editorconfig = "ec"
lint-justfile = { shell = "git ls-files '**/justfile' justfile | xargs --verbose -I {} just --fmt --check --unstable --justfile={}" }
lint-justfile-fix = { shell = "git ls-files '**/justfile' justfile | xargs --verbose -I {} just --fmt --unstable --justfile={}" }
lint-matlab = { shell = "mh_style $(git ls-files '**/*.m')" }
lint-matlab-fix = { shell = "mh_style --fix $(git ls-files '**/*.m')" }
lint-python = { shell = "ruff check && ruff format --check" }
lint-python-fix = { shell = "ruff check --fix --unsafe-fixes && ruff format" }
lint-sql = "sqlfluff lint"
lint-sql-fix = "sqlfluff fix"
lint-vhdl = { shell = "vsg --filename $(git ls-files '**/*.vhd')" }
lint-vhdl-fix = { shell = "vsg --filename $(git ls-files '**/*.vhd') --fix" }
lint-yaml = "yamllint ."
static-type-check-python = "mypy"
