[project]
name = "hm-ansible"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "ansible[windows]==11.9.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.37.0",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
install = "ansible-galaxy install --role-file=requirements.yml"
deploy-hm-macos-group = "ansible-playbook --inventory=hm_macos_group/inventories/hm_macos_group.yaml hm_macos_group/playbooks/hm_macos_group.yml"
deploy-hm-ubuntu-group = "ansible-playbook --inventory=hm_ubuntu_group/inventories/hm_ubuntu_group.yaml hm_ubuntu_group/playbooks/hm_ubuntu_group.yml"
deploy-hm-windows-group = "ansible-playbook --inventory=hm_windows_group/inventories/hm_windows_group.yaml hm_windows_group/playbooks/hm_windows_group.yml"
deploy-hm-rke2-group = "ansible-playbook --inventory=hm_rke2_group/inventories/hm_rke2_group.yaml hm_rke2_group/playbooks/hm_rke2_group.yml"
