[tool.poetry]
name = "hm-api-python-fastapi"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
fastapi = "0.88.0"
uvicorn = {version = "0.20.0", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
poethepoet = "0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "uvicorn app:app --reload --port=64113"
serve = "uvicorn app:app --port=64113 --workers=5"
