[project]
name = "api-python"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "confluent-kafka==2.11.0",
  "fastapi==0.116.1",
  "pydantic-settings==2.10.1",
  "sentry-sdk[fastapi]==2.34.0",
  "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "poethepoet==0.36.0",
  "pytest-cov==6.2.1",
  "pytest==8.4.1",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = { cmd = "uvicorn main:app --port=35903 --reload", env = { ENV = "development" } }
serve = { cmd = "uvicorn main:app --port=35903", env = { ENV = "production" } }
test = { cmd = "pytest --verbose --verbose", env = { ENV = "test" } }
test-coverage = "pytest --cov=. --cov-report=xml"
