[project]
name = "api-python"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "confluent-kafka==2.11.1",
  "fastapi==0.117.1",
  "pydantic-settings==2.10.1",
  "sentry-sdk[fastapi]==2.38.0",
  "uvicorn==0.36.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "poethepoet==0.37.0",
  "pytest-cov==7.0.0",
  "pytest==8.4.2",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = { cmd = "uvicorn main:app --port=35903 --reload", env = { ENV = "development" } }
serve = { cmd = "uvicorn main:app --port=35903", env = { ENV = "production" } }
test = { cmd = "pytest --verbose --verbose", env = { ENV = "test" } }
test-coverage = "pytest --cov=. --cov-report=xml"
