[package]
name = "api-rust"
version = "1.0.0"
edition = "2024"

[dependencies]
async-graphql = "=7.0.17"
async-graphql-axum = "=7.0.17"
async-openai = "=0.29.3"
axum = { version = "=0.8.4", features = ["ws"] }
dotenvy = "=0.15.7"
ffmpeg-sidecar = { version = "=2.2.0", features = ["download_ffmpeg"] }
futures-util = "=0.3.31"
hound = "=3.5.1"
ndarray = "=0.15.6"
once_cell = "=1.21.3"
opencv = "=0.95.1"
ort = "=1.16.3"
reqwest = { version = "=0.12.23", features = ["json", "multipart", "stream"] }
serde = { version = "=1.0.226", features = ["derive"] }
serde_json = "=1.0.145"
tokio = { version = "=1.47.1", features = ["full"] }
tokio-stream = { version = "=0.1.17", features = ["sync"] }
tower = "=0.5.2"
tower-http = { version = "=0.6.6", features = [
  "compression-zstd",
  "cors",
  "timeout",
  "trace",
] }
tower_governor = "=0.8.0"
tracing = "=0.1.41"
tracing-subscriber = "=0.3.20"
utoipa = { version = "=5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "=9.0.2", features = ["axum"] }
webrtc-vad = "=0.4.0"

[dev-dependencies]
axum-test = "=18.1.0"
