[project]
name = "api-rust-scripts"
version = "1.0.0"
requires-python = "~=3.13.3"

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "poethepoet==0.36.0",
  "torch==2.8.0",
  "torchvision==0.23.0",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
download-model = "python scripts/download_model.py"
