[project]
name = "convolutional-neural-network"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "dvc==3.66.1",
  "dvc-s3==3.3.0",
  "pandas==3.0.0",
  "tabulate==0.9.0",
  "torch==2.10.0",
  "torchvision==0.25.0",
  "wandb==0.24.2",
]

[dependency-groups]
dev = [
  "poethepoet==0.41.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.10.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
