[project]
name = "convolutional-neural-network"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "dvc==3.67.1",
  "dvc-s3==3.3.0",
  "pandas==3.0.2",
  "tabulate==0.10.0",
  "torch==2.11.0",
  "torchvision==0.26.0",
  "wandb==0.25.1",
]

[dependency-groups]
dev = [
  "poethepoet==0.44.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.3",
]

[tool.uv]
package = false
required-version = ">=0.10.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
