[project]
name = "convolutional-neural-network"
version = "1.0.0"
requires-python = "==3.13.13"
dependencies = [
  "dvc==3.67.1",
  "dvc-s3==3.3.0",
  "pandas==3.0.3",
  "tabulate==0.10.0",
  "torch==2.12.0",
  "torchvision==0.27.0",
  "wandb==0.27.1",
]

[dependency-groups]
dev = [
  "poethepoet==0.46.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.3",
]

[tool.uv]
package = false
required-version = ">=0.11.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
