[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.13.0"
cmake = "3.30.5"
delocate = "0.12.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.29.0"
pytest = "8.3.3"
pytest-cov = "5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
build = { shell = "cd ../submodules/connextdds-py && git checkout tags/v0.1.5 && python configure.py --nddshome=/Applications/rti_connext_dds-6.1.1 --jobs=8 arm64Darwin20clang12.0 && pip install . && rm -f rti-0.1.5-cp310-cp310-macosx_12_0_arm64.whl && git checkout master" }
subscribe = "python subscribe.py"
publish = "python publish.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
