[project]
name = "graph-neural-network"
version = "1.0.0"
requires-python = "==3.13.11"
dependencies = [
  "numpy==2.4.2",
  "ogb==1.3.6",
  "torch==2.10.0",
  "torch-geometric==2.7.0",
  "tqdm==4.67.1",
  "wandb==0.24.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.40.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.9.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
