[project]
name = "graph-neural-network"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "numpy==2.4.4",
  "ogb==1.3.6",
  "torch==2.11.0",
  "torch-geometric==2.7.0",
  "tqdm==4.67.3",
  "wandb==0.25.1",
]

[dependency-groups]
dev = [
  "poethepoet==0.43.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.10.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
