[project]
name = "graph-neural-network"
version = "1.0.0"
requires-python = "==3.13.13"
dependencies = [
  "numpy==2.4.6",
  "ogb==1.3.6",
  "torch==2.12.0",
  "torch-geometric==2.7.0",
  "tqdm==4.68.1",
  "wandb==0.27.2",
]

[dependency-groups]
dev = [
  "poethepoet==0.46.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.3",
]

[tool.uv]
package = false
required-version = ">=0.11.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
