[tool.poetry]
name = "hm-airflow"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.10.x"
apache-airflow = {version = "2.5.0", extras = ["celery", "s3"]}

[tool.poetry.group.dev.dependencies]
poethepoet = "0.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
