[tool.poetry]
name = "hm-geopandas"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.12.x"
geodatasets = "2023.3.0"
geopandas = "0.14.1"
matplotlib = "3.8.2"
pyarrow = "14.0.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python src/main.py"
