[project]
name = "hm-locust"
version = "1.0.0"
requires-python = "~=3.13.0"
dependencies = [
  "locust==2.38.1",
  "python-dotenv==1.1.1",
  "python-magic==0.4.27",
]

[dependency-groups]
dev = [
  "poethepoet==0.37.0",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = "locust --config=src/locust.conf"
