[tool.poetry]
name = "hm-ni-veristand"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
niveristand = "2.1.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python src/main.py"
