[tool.poetry]
name = "hm-opal-client"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
opal-common = "0.1.12"
asyncpg = "0.24.0"
pydantic = "1.8.2"
tenacity = "6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
