[tool.poetry]
name = "hm-prefect"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
greenlet = "2.0.1"
influxdb-client = "1.35.0"
pandas = "1.5.2"
prefect = "2.7.4"
prefect-aws = "0.2.1"
prefect-shell = "0.1.3"
pyarrow = "10.0.1"
pydantic = "1.10.2"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.17.1"
pytest = "7.2.0"
pytest-cov = "4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev-calculate = "python src/calculate/main.py"
dev-find-taxi-top-routes = "python src/find_taxi_top_routes/main.py"
dev-greet = "python src/greet/main.py"
dev-collect-data = "python src/collect_data/main.py"
build-collect-data = "prefect deployment build src/collect_data/main.py:collect_data --name=collect-data --work-queue=hm-queue"
deploy-collect-data = "prefect deployment apply collect_data-deployment.yaml"
run-collect-data = "prefect deployment run collect-data/collect-data"
prefect-agent-start = "prefect agent start --work-queue=hm-queue"

prefect-local = "prefect orion start"
prefect-cloud-login = "prefect cloud login"
prefect-cloud-workspace-set = "prefect cloud workspace set --workspace=hongbo-miao/hongbomiao"

test = "pytest"
test-coverage = "pytest --cov=. --cov-report=xml"
