[tool.poetry]
name = "hm-prefect"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
greenlet = "2.0.2"
influxdb-client = "1.36.0"
pandas = "1.5.3"
prefect = "2.7.10"
prefect-aws = "0.2.4"
prefect-shell = "0.1.4"
pyarrow = "11.0.0"
pydantic = "1.10.4"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.18.1"
pytest = "7.2.1"
pytest-cov = "4.0.0"
s3fs = "2023.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
prefect-orion-start = "prefect orion start"
prefect-agent-start = "prefect agent start --work-queue=hm-queue"

dev-calculate = "python src/calculate/main.py"
dev-find-taxi-top-routes = "python src/find_taxi_top_routes/main.py"
dev-greet = "python src/greet/main.py"

dev-collect-data = "python src/collect_data/main.py"
build-collect-data = "prefect deployment build src/collect_data/main.py:collect_data --name=collect-data --work-queue=hm-queue --apply"
run-collect-data = "prefect deployment run collect-data/collect-data"

dev-print-platform = "python src/print_platform/main.py"
build-print-platform = "prefect deployment build src/print_platform/main.py:print_platform --name=print-platform --storage-block=s3/hm-prefect-s3-block --infra=kubernetes-job --override=env.EXTRA_PIP_PACKAGES=s3fs --work-queue=hm-queue --apply"
run-print-platform = "prefect deployment run print-platform/print-platform"
add-kubernetes-job-block-print-platform = "python build/print_platform/add_kubernetes_job_block.py"
build-kubernetes-print-platform = "prefect deployment build src/print_platform/main.py:print_platform --name=print-platform --infra-block=kubernetes-job/print-platform-kubernetes-job-block --work-queue=hm-queue --apply"

test = "pytest"
test-coverage = "pytest --cov=. --cov-report=xml"
