[tool.poetry]
name = "hm-prowler"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.12.x"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.0"
prowler = "3.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
prowler = "prowler"
