[tool.poetry]
name = "hm-prowler"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.12.x"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.2"
prowler = "3.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
prowler = "prowler"
