[tool.poetry]
name = "hm-pulumi"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
pulumi = "3.100.0"
pulumi-aws = "6.17.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.4"
pytest = "7.4.4"
pytest-cov = "4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
