[tool.poetry]
name = "hm-pyspark"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
pyspark = "3.3.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.16.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
get-taxi-statistics = "python src/get_taxi_statistics.py"
get-taxi-statistics-sql = "python src/get_taxi_statistics_sql.py"
