[tool.poetry]
name = "hm-pyspark"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
pyspark = "3.3.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.18.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
find-taxi-top-routes = "python src/get_taxi_statistics/main.py"
find-taxi-top-routes-sql = "python src/get_taxi_statistics/main_sql.py"
recommend-movie = "python src/recommend_movie/main.py"
