[tool.poetry]
name = "hm-xxhash"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.12.x"
xxhash = "3.4.1"

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python src/main.py"
