[tool.poetry]
name = "hugging-face"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.11.x"
torch = "2.0.1"
transformers = {version = "4.33.3", extras = ["sentencepiece"]}

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python src/main.py"
