[tool.poetry]
name = "hugging-face"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.10.x"
torch = "2.1.2"
transformers = {version = "4.36.1", extras = ["sentencepiece"]}

[tool.poetry.group.dev.dependencies]
poethepoet = "0.24.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
dev = "python src/main.py"
