[project]
name = "liquid-neural-network"
version = "1.0.0"
requires-python = "==3.14.4"
dependencies = [
  "torch==2.11.0",
  "torchvision==0.26.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.44.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.3",
]

[tool.uv]
package = false
required-version = ">=0.11.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
