[tool.poetry]
name = "hm-locust"
version = "1.0.0"
description = ""
authors = ["Hongbo Miao"]

[tool.poetry.dependencies]
python = "3.9.x"

[tool.poetry.dev-dependencies]
locust = "2.12.2"
python-dotenv = "0.21.0"
python-magic = "0.4.27"
poethepoet = "0.16.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
locust = "locust --config=locust.conf"
