[project]
name = "quantum-computing"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "matplotlib==3.10.8",
  "qiskit[visualization]==2.3.0",
  "qiskit-ibm-runtime==0.45.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.41.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.10.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
