[project]
name = "quantum-computing"
version = "1.0.0"
requires-python = "==3.13.13"
dependencies = [
  "matplotlib==3.10.8",
  "qiskit[visualization]==2.3.1",
  "qiskit-ibm-runtime==0.46.1",
]

[dependency-groups]
dev = [
  "poethepoet==0.44.0",
  "pytest-cov==7.1.0",
  "pytest==9.0.3",
]

[tool.uv]
package = false
required-version = ">=0.10.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
