[project]
name = "bluesky"
version = "1.0.0"
dependencies = [
  "bluesky-simulator[full]==1.1.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.38.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.9.0"

[tool.poe.tasks]
dev = "bluesky"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
