[project]
name = "bluesky"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "bluesky-simulator[full]==1.1.1",
]

[dependency-groups]
dev = [
  "poethepoet==0.40.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.9.0"

[tool.poe.tasks]
dev = "bluesky"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
