[project]
name = "flightradar24"
version = "1.0.0"
dependencies = [
  "fr24sdk==0.3.0",
  "pydantic-settings==2.12.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.38.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.9.0"

[tool.poe.tasks]
dev = { cmd = "python src/main.py", env = { ENV = "development" } }
test = { cmd = "pytest --verbose --verbose", env = { ENV = "test" } }
test-coverage = { cmd = "pytest --cov=. --cov-report=xml", env = { ENV = "test" } }
