[project]
name = "flightradar24"
version = "1.0.0"
requires-python = "==3.13.12"
dependencies = [
  "fr24sdk==0.3.0",
  "pydantic-settings==2.12.0",
]

[dependency-groups]
dev = [
  "poethepoet==0.40.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.9.0"

[tool.poe.tasks]
dev = { cmd = "python src/main.py", env = { ENVIRONMENT = "development" } }
test = { cmd = "pytest --verbose --verbose", env = { ENVIRONMENT = "test" } }
test-coverage = { cmd = "pytest --cov=. --cov-report=xml", env = { ENVIRONMENT = "test" } }
