[project]
name = "hm-aerosandbox"
version = "1.0.0"
dependencies = [
  "AeroSandbox==4.2.9",
  "matplotlib==3.10.7",
  "pyvista==0.46.4",
]

[dependency-groups]
dev = [
  "poethepoet==0.38.0",
  "pytest-cov==7.0.0",
  "pytest==9.0.2",
]

[tool.uv]
package = false
required-version = ">=0.8.0"

[tool.poe.tasks]
dev = "python src/main.py"
test = "pytest --verbose --verbose"
test-coverage = "pytest --cov=. --cov-report=xml"
